<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ifishy</string>
    <string name="welcome_to_ifishy">Selamat datang di Ifishy</string>
    <string name="onboarding_desc_1">Temukan cara modern untuk memastikan kesehatan ikan Anda. Ifishy dapat mendeteksi penyakit ikan hanya dengan satu klik.</string>
    <string name="next">Lanjut</string>
    <string name="one_click_disease_diagnostic">Diagnosis satu klik</string>
    <string name="community_hub_for_discussions">Diskusi Komunitas</string>
    <string name="onboarding_desc_2">Manfaatkan teknologi AI yang canggih untuk mengidentifikasi gejala secara ambil tindakan sebelum terlambat!</string>
    <string name="onboarding_desc_3">Terhubung dengan orang lain untuk berdiskusi, berbagi pengalaman, dan menemukan solusi bersama-sama!</string>
    <string name="opening_title">Jaga ikan anda!</string>
    <string name="login">Masuk</string>
    <string name="get_started">Mulai</string>
    <string name="opening_desc">Pastikan Anda memberikan ikan Anda perawatan yang layak mereka dapatkan mulai saat ini!</string>
    <string name="logo">logo</string>
    <string name="sign_up_title">Hallo, Ayo Daftar</string>
    <string name="sign_up_desc">Masukkan informasi kamu untuk daftar</string>
    <string name="login_title">Hello, Ayo Login</string>
    <string name="login_desc">Masukkan informasi kamu untuk masuk</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="sign_up">Daftar</string>
    <string name="don_t_have_an_account_register">TIdak punya akun? <b>Daftar</b></string>
    <string name="tools_title">18 of The Most Common Fish Diseases</string>
    <string name="tools_author">Aquariumstore</string>
    <string name="tools_date">Oct 25, 2023</string>
    <string name="tools_desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections.\n\n1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.\n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">share</string>
    <string name="back">Kembali</string>
    <string name="okay">Okay</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_fragment_history">Riwayat</string>
    <string name="hint_search">Cari</string>
    <string name="button_date_for_history">Button date for history</string>
    <string name="foto_preview_postingan">preview</string>
    <string name="community">Komunitas</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
    <string name="home_menu">Home</string>
    <string name="history_menu">Riwayat</string>
    <string name="scan_menu">Pindai</string>
    <string name="community_menu">Community</string>
    <string name="profile_menu">Profile</string>
    <string name="no_internet">Tidak ada internet</string>
    <string name="already_have_an_account_login">Sudah punya akun? <b>Masuk</b></string>
    <string name="welcome">Selamat Datang</string>
    <string name="profile_picture">Foto profile</string>
    <string name="newest_article">Artikel Terbaru</string>
    <string name="article">Artikel</string>
    <string name="article_image">article_image</string>
    <string name="internal_server_error">Server error</string>
    <string name="login_error">Gagal Masuk</string>
    <string name="field_empty">Masukkan informasi dengan benar</string>
    <string name="signup_success">Berhasil Daftar</string>
    <string name="sign_up_success_desc">Login untuk mulai</string>
    <string name="signup_error">Gagal Daftar</string>
    <string name="profile">Profil</string>
    <string name="faq">FAQ</string>
    <string name="tools_question">Question</string>
    <string name="expand_tool_2">Expand tool</string>
    <string name="answer">Answer</string>
    <string name="comments">Komentar</string>
    <string name="reply">%1$d Reply</string>
    <string name="tool_settings">Pengaturan</string>
    <string name="settings_nightmode">Mode Gelap</string>
    <string name="tools_logout">Keluar</string>
    <string name="contact_us">Hubungi kami</string>
    <string name="tools_email">tertawatapiterluka@gmail.com</string>
    <string name="notification">Notification</string>
    <string name="error_comments">Gagal menambahkan komentar</string>
    <string name="no_post">Belum ada postingan</string>
    <string name="no_comments_yet">Belum ada komentar</string>
    <string name="post">postingan</string>
    <string name="add_post">Tambah Postingan</string>
    <string name="post_title">Judul Postingan</string>
    <string name="write_here">Tulis postingan kamu disini</string>
    <string name="no_image_selected">Tidak ada gambar yang dipilih</string>
    <string name="error_upload">Gagal Upload</string>
    <string name="form_empty">Isi form dengan benar</string>
    <string name="cancel">Batal</string>
    <string name="are_you_sure">Apakah kamu yakin?</string>
    <string name="post_not_save">Postingan tidak akan disimpan</string>
    <string name="guest">Tamu</string>
    <string name="settings">Pengaturan</string>
    <string name="see_more">Lihat lebih</string>
    <string name="edit">edit</string>
    <string name="hidden_pass">*********</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="language">Bahasa</string>
    <string name="want_to_logout">Kamu mau logout?</string>
    <string name="q1">Apa itu aplikasi iFishy?</string>
    <string name="q2">Bagaimana cara menggunakan fitur scan penyakit pada ikan?</string>
    <string name="q3">Apa saja yang bisa saya temukan di menu Beranda?</string>
    <string name="q4">Bagaimana cara melihat riwayat scan yang pernah saya lakukan?</string>
    <string name="q5">Apa saja fitur yang tersedia di menu Komunitas?</string>
    <string name="q6">Bisakah saya menyimpan postingan atau artikel dari aplikasi?</string>
    <string name="q7">Bagaimana cara memperbarui informasi di menu Profil?</string>
    <string name="q8">Apakah aplikasi ini memerlukan koneksi internet?</string>
    <string name="q9">Apakah data yang saya unggah di aplikasi aman?</string>
    <string name="q10">Bagaimana cara melaporkan bug atau memberikan masukan terkait aplikasi?</string>
    <string name="a1">iFishy adalah aplikasi yang dirancang untuk membantu pengguna dalam mendeteksi penyakit pada ikan melalui fitur scan. Selain itu, aplikasi ini menyediakan artikel, forum komunitas, riwayat penyakit, dan profil pengguna.</string>
    <string name="a2">Anda cukup mengambil atau mengunggah foto ikan menggunakan fitur scan di aplikasi. Sistem akan menganalisis gambar dan memberikan informasi mengenai kemungkinan penyakit yang diderita ikan.</string>
    <string name="a3">Menu Home menampilkan berbagai artikel dan post terkini yang relevan dengan kesehatan ikan, tips perawatan, dan informasi menarik lainnya tentang dunia ikan.</string>
    <string name="a4">Riwayat scan penyakit dapat diakses melalui menu History. Di sana, Anda dapat melihat daftar hasil scan sebelumnya, lengkap dengan tanggal dan informasi terkait.</string>
    <string name="a5">Menu Community memungkinkan Anda membuat post seputar ikan dan penyakitnya, memberikan komentar pada post orang lain, serta memberikan upvote atau downvote untuk menilai relevansi atau kualitas sebuah topik.</string>
    <string name="a6">Saat ini, Anda bisa menandai artikel atau post untuk dibaca nanti. Cukup klik opsi Save yang tersedia di setiap artikel atau post.</string>
    <string name="a7">Anda bisa memperbarui informasi di menu Profile dengan memilih tombol Edit Profile. Dari sana, Anda dapat mengubah data seperti nama, foto profil, dan informasi pribadi lainnya.</string>
    <string name="a8">Ya, iFishy memerlukan koneksi internet untuk mengakses fitur seperti scan penyakit, artikel, post komunitas, dan sinkronisasi data pengguna.</string>
    <string name="a9">Ya, iFishy menggunakan sistem enkripsi untuk melindungi data pengguna. Informasi pribadi dan hasil scan Anda hanya dapat diakses oleh Anda.</string>
    <string name="a10">Anda dapat melaporkan bug atau memberikan masukan melalui tim pengembang via email.</string>
    <string name="added_to_bookmark">Di tambah ke bookmark</string>
    <string name="removed_from_bookmark">Di hapus dari bookmark</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="load_profile_error">Gagal memuat menu profil</string>
    <string name="personal_info">Informasi pribadi</string>
    <string name="new_password">Password baru</string>
    <string name="old_password">Password lama</string>
    <string name="edit_profile_error">Edit profil error</string>
    <string name="edit_profile_success">Edit profil berhasil</string>
    <string name="your_profile_updated">Profil di updated</string>
    <string name="input_old_password_first_to_change_password">Masukkan password lama untuk mengubah password</string>
    <string name="upload_photo_failed">Gagal upload foto</string>
    <string name="no_bookmark_yet">Belum ada bookmark</string>
    <string name="camera_must_allowed">Kamera harus di izinkan</string>
    <string name="failed_to_start_camera">Gagal membuka kamera</string>
    <string name="cause">Penyebab</string>
    <string name="treatment">Perawatan</string>
    <string name="scanning">Memindai</string>
    <string name="error_while_take_photo">Error saat ambil foto</string>
    <string name="validation">Validasi</string>
    <string name="lanjutkan_tanpa_akun">Lanjutkan tanpa akun</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_kurang_dari_6_karakter">Password kurang dari 6 karakter</string>
    <string name="scanning_error">Scanning Error</string>
    <string name="ulangi">Ulangi</string>
    <string name="ikan_tidak_terdeteksi">Ikan tidak terdeteksi</string>
    <string name="gagal_simpan">Gagal menyimpan ke riwayat</string>
    <string name="disimpan_di_riwayat">Disimpan di riwayat</string>
    <string name="belum_ada_history">Belum ada history</string>
    <string name="tidak_ada_data_untuk_tanggal">Tidak ada data untuk tanggal %1$s</string>
    <string name="pilih">Pilih</string>
    <string name="batal">Batal</string>

</resources>