<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/history"
        android:title="@string/history_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/scan"
        android:title="@string/scan_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/community"
        android:title="@string/community_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_menu"
        android:title="@string/profile_menu"
        app:showAsAction="ifRoom" />
</menu>