<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/global_page_padding_margin"
    tools:context=".ui.activity.auth.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/sign_up_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:textSize="@dimen/semi_large_text"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/sign_up_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/sign_up_desc"
        android:textAlignment="center"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />

    <EditText
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/username"
        android:includeFontPadding="false"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/upper_meidum_text"
        app:backgroundTint="@color/edit_text_background"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_desc" />

    <EditText
        android:maxLines="1"
        android:layout_marginVertical="5dp"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_shape"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/upper_meidum_text"
        app:backgroundTint="@color/edit_text_background"
        app:layout_constraintBottom_toTopOf="@+id/password_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:textColorHint="@color/hint_edit_text"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:letterSpacing="0"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="@color/edit_text_background"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:includeFontPadding="false"
            android:textSize="@dimen/upper_meidum_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:maxLines="1"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_shape"
        android:backgroundTint="@color/edit_text_background"
        android:fontFamily="@font/poppins"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="@dimen/upper_meidum_text"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

    <Button
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="30dp"
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_shape"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_light"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/register_button"
        android:textSize="@dimen/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_have_an_account_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

</androidx.constraintlayout.widget.ConstraintLayout>