<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.setting.SettingActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/global_page_padding_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/back_button"
            android:layout_height="@dimen/back_button"
            android:background="@drawable/image_button"
            android:backgroundTint="@color/secondary_light"
            android:contentDescription="@string/back"
            android:padding="20dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tool_settings"
            android:textAlignment="center"
            android:textSize="@dimen/large_text"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back" />

        <TextView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:paddingVertical="10dp"
            android:text="@string/faq"
            android:textAlignment="textStart"
            android:textSize="@dimen/upper_meidum_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <TextView
            android:id="@+id/Language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:paddingVertical="10dp"
            android:text="@string/language"
            android:textAlignment="textStart"
            android:textSize="@dimen/upper_meidum_text"
            app:layout_constraintBottom_toBottomOf="@id/language_spinner"
            app:layout_constraintStart_toStartOf="@id/language_spinner"
            app:layout_constraintTop_toTopOf="@id/language_spinner" />

        <ImageButton
            android:id="@+id/expand_button"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/expand_tool_2"
            android:rotation="180"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/faq"
            app:layout_constraintEnd_toEndOf="@id/faq"
            app:layout_constraintTop_toTopOf="@+id/faq" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            android:popupBackground="?android:windowBackground"
            android:text="@string/faq"
            android:textAlignment="textEnd"
            android:textSize="@dimen/upper_meidum_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faq"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_night"
            style="@style/Switch.Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:paddingVertical="10dp"
            android:text="@string/settings_nightmode"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/upper_meidum_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_spinner" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/logout"
            app:layout_constraintBottom_toBottomOf="@id/settings_logout"
            app:layout_constraintEnd_toEndOf="@id/settings_logout"
            app:layout_constraintTop_toTopOf="@id/settings_logout" />

        <TextView
            android:id="@+id/settings_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/logout"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="8dp"
            android:text="@string/tools_logout"
            android:textAlignment="textStart"
            android:textColor="#AF0000"
            android:textSize="@dimen/upper_meidum_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_night" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="@color/contact"
            android:textSize="@dimen/medium_text"
            app:layout_constraintBottom_toTopOf="@id/email_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/email_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/tools_email"
            android:textAlignment="center"
            android:textColor="@color/contact"
            android:textSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>